syntax = "proto3";

option java_package = "de.marcreichelt.virusinfos";
option java_multiple_files = true;

message ComplicationDataCache {
  float firstVaccination = 1;
  float fullVaccination = 2;
  repeated int32 activeComplicationIds = 3;
}
